# ha-garmin-livetrack

./: .gitignore  LICENSE  README.md  TODO.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yaml  hassfest.yaml  tests.yaml
custom_components/garmin_livetrack/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  icons.py  manifest.json  models.py  quality_scale.yaml  repairs.py  sensor.py  services.yaml  strings.json
custom_components/garmin_livetrack/translations/: en.json
docs/: ARCHITECTURE.md  GARMIN_FETCH_STRATEGY.md  architecture-implementation-plan.md  garmin_livetrack_notifications_example_unverified.yaml
docs/releases/: v0.2.0.md
scripts/: test-local.ps1  test-local.sh
tests/: conftest.py  test_client_fetch.py  test_client_parse.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_manager.py
