[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-garmin-livetrack"
version = "0.2.0"
description = "Home Assistant custom integration for Garmin LiveTrack"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
